# py-gpmf-parser

./: .gitignore  README.md  example.py  pyproject.toml  pyproject_ref.toml
analysis/: basic.ipynb
draw_boxes/: draw_bounds.py
export_data/: export_data.py
py_gpmf_parser/: gopro_telemetry_extractor.py
